# FFT_Method_Test

./: CMakeLists.txt
docs/: algorithm_brinkman.md  stage1_mathematical_plan_bignonnet.md
examples/voronoi_1cells/: Voronoi_lattice_c1_vf30.geom
include/app/config/: Config.hpp
include/brinkman/: FFT.hpp  FluidBrinkman.hpp
include/core/: Geometry.hpp  Types.hpp
include/logging/: Logger.hpp
include/materials/: MaterialDatabase.hpp
src/: ConfigParser.cpp  FFT.cpp  FluidBrinkman.cpp  GeometryReader.cpp  Logger.cpp  MaterialDatabase.cpp  StudyRunner.cpp  main.cpp
src/app/: PermeabilityRunner.cpp  PermeabilityRunner.hpp  SimulationConfig.cpp  SimulationConfig.hpp
src/bignonnet/: BackgroundForce.cpp  BackgroundForce.hpp  ForceSupport.cpp  ForceSupport.hpp  GreenDiscretization.hpp  GreenOperator.cpp  GreenOperator.hpp  TrialForceField.cpp  TrialForceField.hpp  VariationalOperator.cpp  VariationalOperator.hpp  VariationalRHS.cpp  VariationalRHS.hpp  VelocityRecovery.cpp  VelocityRecovery.hpp  WaveVectorGrid.cpp  WaveVectorGrid.hpp
src/brinkman/: FFT.cpp  FluidBrinkman.cpp
src/core/: Array3D.hpp  Field3D.hpp  Grid3D.hpp  Indexing.hpp  Types.hpp
src/fft/: FFTBackendFactory.cpp  FFTBackendFactory.hpp  FFTWBackend.cpp  FFTWBackend.hpp  IFFTBackend.hpp  SYCLFFTBackend.cpp  SYCLFFTBackend.hpp
src/geometry/: BinaryMedium.cpp  BinaryMedium.hpp  InterfaceVoxels.cpp  InterfaceVoxels.hpp
src/io/: VoxelIO.cpp  VoxelIO.hpp
src/logging/: Logger.cpp
src/materials/: MaterialDatabase.cpp
src/post/: Diagnostics.cpp  Diagnostics.hpp  PermeabilityTensor.cpp  PermeabilityTensor.hpp
src/solver/: ILinearOperator.hpp  MinresSolver.cpp  MinresSolver.hpp  SolverResult.hpp
tests/: test_background_force.cpp  test_fft_roundtrip.cpp  test_grid.cpp  test_interface_voxels.cpp  test_material_database.cpp  test_projector_green.cpp  test_simulation_config.cpp  test_small_permeability_pipeline.cpp  test_support_mapping.cpp  test_variational_operator_symmetry.cpp  test_variational_rhs.cpp  test_velocity_recovery.cpp  test_voxelio_load_geometry.cpp
